--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
     height: 300px;
     margin-top: 77px;
     margin-left: 37px;
+    padding-top: 0px;
 }
 p {
     text-align: justify;
+    margin-top: 0px;
 }
 h1 {
     color: #FF0000;
